Fix broken logo on netlify and align signature to the left

--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -49,10 +49,10 @@
 .signoff {
     font-size: 2.2em;
     font-family: "Ruthie", serif;
-    text-align: right;
-    transform: rotate(-10deg);
+    text-align: left;
+    transform: rotate(-6deg);
     padding-bottom: 0;
-    margin: 3.5rem 3rem 0 0;
+    margin: 3.5rem 0 0 0.5rem;
     color: var(--color-primary);
     opacity: 0.9;
 }
